Fix overflow issue on Chrome

--- a/_sass/apocalypse/_base.scss
+++ b/_sass/apocalypse/_base.scss
@@ -239,6 +239,7 @@ section#faqs .ad-nauseum {
 }
 
 .site-footer {
+    overflow: hidden;
     padding: 0;
     color: $white;
     background: $jet;
