--- a/_sass/apocalypse/_form.scss
+++ b/_sass/apocalypse/_form.scss
@@ -4,7 +4,7 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 #mc_embed_signup {
     form {
         padding: 10px 0 10px 0;
-        margin-bottom: 3rem;
+        margin-bottom: 1rem;
         font-size: 1.1em;
     }
     input.email {
