--- a/_sass/apocalypse/_navigation.scss
+++ b/_sass/apocalypse/_navigation.scss
@@ -44,7 +44,7 @@ a.button {
         }
         &#call-to-action {
             background: $black;
-            margin: 1.25rem 0 0;
+            margin: 1.25rem 0 0.5rem;
             float: none;
             display: inline-block;
                 &:hover {
